--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           </nav>
           <header class="flex align-items-center text-center text-md-start justify-content-center justify-content-md-start">
-            <div class="container flex flex-column align-items-center align-items-md-start">
+            <div class="container flex flex-column align-items-center justify-content-center align-items-md-start">
                 <h1>بلدية دمشق</h1>
                 <p class="lead">بلدية دمشق ترحب بكم 
                      بلدية دمشق بلدية دمشق بلدية دمشق بلدية دمشق بلدية دمشق بلدية دمشق
