--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </div>
             </div>
           </nav>
-          <header class="flex align-items-center text-center text-md-start justify-content-center justify-content-md-start">
+          <header class="flex py-5 align-items-center text-center text-md-start justify-content-center justify-content-md-start">
             <div class="container flex flex-column align-items-center justify-content-center align-items-md-start">
                 <h1>بلدية دمشق</h1>
                 <p class="lead">بلدية دمشق ترحب بكم 
@@ -127,8 +127,8 @@
 
 <!-- Footer -->
 <footer id="footer" class="py-5 bg-black">
-  <div class="container flex flex-column flex-sm-row gap-5 justify-content-between align-items-center">
-   <div class="flex-fill">
+  <div class="container flex flex-column flex-sm-row g-5 justify-content-between align-items-center">
+   <div class="flex-fill mb-2">
     <h2 class="mb-5 text-white">تواصل معنا :</h2>
     <div class="flex gap-3">
       <i class="fa-solid fa-brands fa-facebook fa-2xl text-primary"></i>
