--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
               </div>
             </div>
           </nav>
-          <header class="flex py-5 align-items-center text-center text-md-start justify-content-center justify-content-md-start">
-            <div class="container flex flex-column align-items-center justify-content-center align-items-md-start">
+          <header class="d-flex py-5 align-items-center text-center text-md-start justify-content-center justify-content-md-start">
+            <div class="container d-flex flex-column align-items-center justify-content-center align-items-md-start">
                 <h1>بلدية دمشق</h1>
                 <p class="lead">بلدية دمشق ترحب بكم 
                      بلدية دمشق بلدية دمشق بلدية دمشق بلدية دمشق بلدية دمشق بلدية دمشق
@@ -127,17 +127,17 @@
 
 <!-- Footer -->
 <footer id="footer" class="py-5 bg-black">
-  <div class="container flex flex-column flex-sm-row g-5 justify-content-between align-items-center">
+  <div class="container d-flex flex-column flex-sm-row gap-5 justify-content-between align-items-center">
    <div class="flex-fill mb-2">
     <h2 class="mb-5 text-white">تواصل معنا :</h2>
-    <div class="flex gap-3">
+    <div class="d-flex gap-3">
       <i class="fa-solid fa-brands fa-facebook fa-2xl text-primary"></i>
       <i class="fa-solid fa-brands fa-twitter fa-2xl text-info"></i>
       <i class="fa-solid fa-brands fa-whatsapp fa-2xl text-success"></i>
       <i class="fa-solid fa-brands fa-snapchat fa-2xl text-warning"></i>
     </div>
    </div>
-    <div class="text-white flex-fill">
+    <div class="text-white mb-3 flex-fill">
       <h2 class="mb-3">لاستفساراتكم :</h2>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">الايميل :</label>
