--- a/index.html
+++ b/index.html
@@ -125,6 +125,61 @@
 </section>
 <!-- Events Section -->
 
+<!-- FAQ Section -->
+<section class="faq py-5">
+  <h2 class="text-center mb-5">الاسئلة الشائعة</h2>
+  <div class="container">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            السؤال الاول السؤال السؤال الاول ؟
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            السؤال الاول السؤال الاول السؤال الاول ؟
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            السؤال الاول السؤال الاول ؟
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            السؤال الاول السؤال الاول السؤال الاول 
+            </div>        
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- FAQ Section -->
+
 <!-- Footer -->
 <footer id="footer" class="py-5 bg-black">
   <div class="container d-flex flex-column flex-sm-row gap-5 justify-content-between align-items-center">
