--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href="#members">أعضاء البلدية</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="#faq">الاسئلة الشائعة</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#footer">تواصل معنا</a>
                   </li>
                 </ul>
@@ -126,7 +129,7 @@
 <!-- Events Section -->
 
 <!-- FAQ Section -->
-<section class="faq py-5">
+<section class="faq py-5" id="faq">
   <h2 class="text-center mb-5">الاسئلة الشائعة</h2>
   <div class="container">
     <div class="accordion accordion-flush" id="accordionFlushExample">
