--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
           </header>
     </main>
 
+<!-- Sign Up Section -->
+<section class="sign py-5">
+  <div class="container text-center">
+    <div class="row justify-content-between align-items-center">
+      <div class="col-md-4">
+        <h3>اشترك للحصول على رسائل</h3>
+      </div>
+      <div class="col-md-8 row py-3">
+        <input class="col-md-8 mb-2 mb-md-0" type="email" name="" id="">
+        <button class="col-md-4 btn btn-dark rounded-0">اشترك</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Sign Up Section -->
+
 <!-- Members Section -->
  <section id="members" class="members my-5">
   <h1 class="text-center mb-5">أعضاء البلدية</h1>
