--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- Sign Up Section -->
 <section class="sign py-5">
   <div class="container text-center">
-    <div class="row justify-content-between align-items-center">
+    <div class="row justify-content-center align-items-center">
       <div class="col-md-4">
         <h3>اشترك للحصول على رسائل</h3>
       </div>
